<resources>

    <string name="app_name">AppName</string>

    <string name="new_user_register">新用户注册</string>
    <string name="welcome_use_security">欢迎使用安代保</string>
    <string name="phone_number">手机号</string>
    <string name="phone_number_">+86</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="query">查询</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="register">注册</string>
    <string name="input_phone_number">请输入手机号</string>
    <string name="next_step">下一步</string>
    <string name="input_verify_code">请输入验证码</string>
    <string name="send_out_verify_code">验证码已发送至手机:</string>
    <string name="set_pwd">请设置密码</string>
    <string name="loginpwd_for_phoneAndPC">登录密码用于手机安代保与电脑安代保登记</string>
    <string name="key_set_pwd">需6-20位字符</string>
    <string name="btnSure">确认</string>

    <string name="update_app">检查更新中，请稍候……</string>
    <string name="update_app_already_new">已经是最新版本了</string>
    <string name="update_app_find_new_version">发现新版本</string>
    <string name="downloading">下载中，请稍候……</string>

    <string name="bbsq">版权声明%1$s
  ①智慧安全生产服务云系统对其发行的作品享有版权，受国家版权法及版权公约的保护。%2$s
  ②对于上述版权内容，超越合理使用范畴、并未经本公司书面许可的使用行为，我公司均保留追究法律责任的权利。</string>
    <string name="ysbh">用户协议%1$s
欢迎您使用智慧安全生产服务云系统！%2$s
      为使用的智慧安全生产服务云系统服务，您应当阅读并遵守《智慧安全生产服务云系统用户协议》（以下简称“本协议”）和《版权声明》。请您务必审慎阅读、充分理解各条款内容，特别是免除或者限制智慧安全生产服务云系统责任的条款、对用户权利进行限制的条款，以及开通或使用某项服务的单独协议或规则。限制、免责条款或者其他涉及您重大权益的条款请您重点注意。%3$s

一、【总则】%4$s
1.1在本协议中，“您”指客户、网站浏览者、技术使用者；“我们”指本网站；“服务”指本网站提供的所有相关服务。%5$s
1.2当您在使用本网站时，或进行相关注册，或接受相关服务时，代表您已经同意遵守并受本协议约束，并同意遵守中国相关法律法规，所以请您务必仔细阅读本协议。%6$s
1.3如果您不同意本协议的相关条款，请您立即停止使用本网站及其服务。%7$s
1.4您同意使用本网站及其技术服务时，您应保证具备签订合同的民事行为能力。%8$s
1.5请您一并阅读《版权声明》，其为本协议不可分割的部分。%9$s

二、【用户注册】%10$s
2.1当您在本网站或使用本网站服务时，您应当提供完整、准确、真实的注册信息。如果您没有提供完整、准确、真实的注册信息，因此而导致您的权利受损，本网站免责。%11$s
2.2请您妥善保管您的密码和帐号。非因本网站原因导致的密码及帐号泄露，本网站不承担法律后果。%12$s
2.3当您的账户、用户名及密码非经您本人授权被使用时，您应及时通知本网站。本网站及时采取措施，减少您的利益受损。但在本网站采取措施之前的损失，本网站免责。%13$s
2.4对于您从本网站了解的商业秘密，您有义务保密。未经本网站的书面许可，您不得向任何第三方披露或允许其使用该商业秘密。%14$s

三、【账号与密码安全】%15$s
3.1您在使用本服务时可能需要注册一个帐号。关于您使用帐号的具体规则，请仔细阅读并遵守相关单独协议。%16$s
      3.2智慧安全生产服务云系统特别提醒您应妥善保管您的帐号和密码。当您使用完毕后，应安全退出。因您保管不善可能导致遭受被盗号或密码失窃，责任由您自行承担。%17$s
      3.3您在使用本服务过程中，您应当保证您个人信息的内容和形式符合法律法规（本协议中的“法律法规”指用户所属/所处地区、国家现行有效的法律、行政法规、司法解释、地方法规、地方规章、部门规章及其他规范性文件以及对于该等法律法规的不时修改和补充，以及相关政策规定等，下同。）、公序良俗、社会公德以及智慧安全生产服务云系统平台规则，且不会侵害任何主体的合法权益。%18$s
四、【用户个人信息保护】%19$s
  4.1保护用户个人信息是智慧安全生产服务云系统的一项基本原则。您在注册帐号或使用本服务的过程中，可能需要填写一些必要的信息。若国家法律法规有特殊规定的，您需要填写真实的身份信息。若您填写的信息不完整，则可能无法使用本服务或在使用过程中受到限制。%20$s
      4.2一般情况下，您可根据相关产品规则浏览、修改自己提交的信息，但出于安全性和身份识别（如号码申诉服务等）的考虑，您可能无法修改注册时提供的初始注册信息及其他验证信息。%21$s
      4.3智慧安全生产服务云系统将尽可能运用各种安全技术和程序建立完善的管理制度来保护您的个人信息，以免遭受未经授权的访问、使用或披露。%22$s
   4.4 智慧安全生产服务云系统不会将您的个人信息转移或披露给任何第三方，除非：%23$s
      （1）相关法律法规或司法机关、行政机关要求。%24$s
      （2）为提供您要求的服务所必需。%25$s
  五、【按现状提供服务】%26$s
您理解并同意：%27$s
     5.1本服务是按照现有技术和条件所能达到的现状提供的。智慧安全生产服务云系统尽最大努力保障服务的连贯性和安全性，但智慧安全生产服务云系统不能随时预见和防范法律、技术以及其他风险，智慧安全生产服务云系统对此类风险在法律允许的范围内免责，包括但不限于不可抗力、病毒、木马、黑客攻击、系统不稳定、第三方服务瑕疵、政府行为等原因可能导致的服务中断、数据丢失以及其他的损失和风险。%28$s
     5.2因经营策略安排或调整等原因,不同地区的用户可使用的具体智慧安全生产服务云系统服务的内容可能会存在差异，具体以智慧安全生产服务云系统实际提供的为准。%29$s
六、【基于软件提供服务】%30$s
依托“软件”向您提供服务，您还应遵守以下约定：%31$s
     6.1您在使用本服务的过程中可能需要下载软件，对于这些软件，智慧安全生产服务云系统给予您一项个人的、不可转让及非排他性的许可。您仅可为使用本服务的目的而使用这些软件。%32$s
     6.2为了改善用户体验、保障服务的安全性及产品功能的一致性等目的，智慧安全生产服务云系统可能会对软件进行更新。您应该将相关软件更新到最新版本，否则智慧安全生产服务云系统并不保证软件或服务能正常使用。%33$s
     6.3除非智慧安全生产服务云系统书面许可，您不得从事下列任一行为：%34$s
     （1）删除软件及其副本上关于著作权的信息。%35$s
     （2）对软件进行反向工程、反向汇编、反向编译，或者以其他方式尝试发现软件的源代码。%36$s
     （3）对智慧安全生产服务云系统拥有知识产权的内容进行使用、出租、出借、复制、修改、链接、转载、汇编、发表、出版、建立镜像站点等。%37$s
     （4）对软件或者软件运行过程中释放到任何终端内存中的数据、软件运行过程中客户端与服务器端的交互数据，以及软件运行所必需的系统数据，进行复制、修改、增加、删除、创作任何衍生作品。%38$s
     （5）通过修改或伪造软件运行中的指令、数据等任何方式，增加、删减、变动软件的功能或运行效果。%39$s
七、【遵守当地法律监管】%40$s
    7.1您在使用本服务过程中应当遵守当地相关的法律法规，并尊重当地的道德和风俗习惯。如果您的行为违反了当地法律法规或道德风俗，您应当为此独立承担责任。%41$s
    7.2您应避免因使用本服务而使智慧安全生产服务云系统违反法律法规或卷入政治和公共事件，否则智慧安全生产服务云系统有权暂停或终止对您的服务。%42$s
八、【不可抗力及其他免责事由】%43$s
    8.1您理解并同意，在使用本服务的过程中，可能会遇到不可抗力等风险因素，使本服务受到影响。不可抗力是指不能预见、不能克服并不能避免且对一方或双方造成重大影响的客观事件，包括但不限于自然灾害如洪水、地震、瘟疫流行和风暴等以及社会事件如战争、动乱、政府行为等。出现上述情况时，智慧安全生产服务云系统将努力在第一时间与相关单位配合，争取及时进行处理，但是由此给您造成的损失智慧安全生产服务云系统在法律允许的范围内免责。%44$s
    8.2在法律允许的范围内，智慧安全生产服务云系统对以下情形导致的服务中断或受阻不承担责任：%45$s
    （1）受到计算机病毒、木马或其他恶意程序、黑客攻击的破坏。%46$s
    （2）用户或智慧安全生产服务云系统的电脑软件、系统、硬件和通信线路出现故障。%47$s
    （3）用户操作不当或用户通过非智慧安全生产服务云系统授权的方式使用本服务。%48$s
    （4）程序版本过时、设备的老化和/或其兼容性问题。%49$s
    （5）其他智慧安全生产服务云系统无法控制或合理预见的情形。%50$s
九、【协议的生效与变更】%51$s
    9.1您使用本服务即视为您已阅读本协议并接受本协议的约束。%52$s
    9.2智慧安全生产服务云系统有权在必要时修改本协议条款。您可以在相关服务页面查阅最新版本的协议条款。%53$s
    9.3本协议条款变更后，如果您继续使用智慧安全生产服务云系统提供的软件或服务，即视为您已接受变更后的协议。%54$s
十、【服务的变更、中断、终止】%55$s
    10.1您理解并同意，智慧安全生产服务云系统基于经营策略的调整，可能会对服务内容进行变更，也可能会中断、中止或终止服务。%56$s
    10.2在智慧安全生产服务云系统发生合并、分立、收购、资产转让时，智慧安全生产服务云系统可向第三方转让本服务下相关资产；智慧安全生产服务云系统也可在单方通知您后，将本协议下部分或全部服务及相应的权利义务转交由第三方运营或履行。具体受让主体以智慧安全生产服务云系统通知的为准。%57$s
    10.3如发生下列任何一种情形，智慧安全生产服务云系统有权不经通知而中断或终止向您提供服务：%58$s
    （1）根据法律法规规定您应提交真实信息，而您提供的个人资料不真实、或与注册时信息不一致又未能提供合理证明。%59$s
    （2）您违反相关法律法规的规定或违反本协议的约定。%60$s
    （3）按照法律法规规定，司法机关或主管部门的要求。%61$s
    （4）出于安全的原因或其他必要的情形。%62$s
十一、【其他】%63$s
11.1如果您对本协议或本服务有意见或建议，可与客户服务部门联系，我们会给予您必要的帮助。%64$s
我们可能适时修订本政策内容。如该等变更会导致您在本政策项下权利的实质减损，我们将在变更生效前，通过在页面显著位置提示、向您发送电子邮件等方式通知您。%65$s
更新日期: 2018年12月17日
</string>
    <string name="examinetip">您的账号正在审核中，完善您的信息可以帮助我们核实以便尽快给您开通服务</string>

    <string name="TwoWeeksAgoInfo">两周前的消息</string>

</resources>
